--- a/deno-nextjs/package.json
+++ b/deno-nextjs/package.json
@@ -13,7 +13,9 @@
     "react-dom": "^19.2.0"
   },
   "devDependencies": {
+    "@types/node": "24.7.2",
     "@types/react": "^19.2.2",
-    "@types/react-dom": "^19.2.2"
+    "@types/react-dom": "^19.2.2",
+    "typescript": "5.9.3"
   }
 }
